# character-card-copilot

./: .gitignore  AGENTS.md  README.en.md  README.md  REFACTOR-STORE.md  architecture-guidance.md  backend_refactor_plan.md  package.json  pnpm-lock.yaml  review_full_progress.md  temp-arch.txt  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
packaging/arch/: .SRCINFO  PKGBUILD
packaging/linux/: character-card-copilot.desktop
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_cancellation.rs  ai_chat.rs  ai_config.rs  ai_tools.rs  api_config.rs  character_session.rs  character_storage.rs  chat_history.rs  command_system.rs  context_builder.rs  debug_log.rs  events.rs  file_utils.rs  lib.rs  png_utils.rs  token_counter.rs  tools.rs
src-tauri/src/ai_chat/: adapter.rs  formatting.rs  mod.rs  service.rs  types.rs
src-tauri/src/backend/: application.rs  domain.rs
src-tauri/src/backend/application/: command_service.rs  event_bus.rs  mod.rs  session_service.rs  tool_service.rs
src-tauri/src/backend/domain/: events.rs  mod.rs  sessions.rs
src-tauri/src/backend/domain/commands/: mod.rs  models.rs
src-tauri/src/backend/domain/events/: mod.rs  payloads.rs
src-tauri/src/backend/domain/sessions/: config.rs  session.rs
src-tauri/src/backend/infrastructure/: mod.rs  tauri.rs
src-tauri/src/backend/infrastructure/tauri/: ai_chat_commands.rs  ai_config_commands.rs  api_config_commands.rs  character_commands.rs  chat_history_commands.rs  general_commands.rs  mod.rs  session_commands.rs  token_commands.rs  tool_commands.rs
src-tauri/src/command_system/: builtin.rs  command.rs  loader.rs  registry.rs  tauri_commands.rs
src-tauri/src/command_system/builtin/: clear_command.rs  continue_command.rs  mod.rs  regenerate_command.rs
src-tauri/src/tools/: character_editor.rs  character_field_patcher.rs  character_fields.rs  mod.rs  read_character_field.rs  registry.rs  traits.rs  world_book_creator.rs  world_book_deleter.rs  world_book_lister.rs  world_book_reader.rs  world_book_shared.rs  world_book_updater.rs
src/assets/: glass.css  styles.css
src/components/: AIPanel.vue  ApiItem.vue  ApiList.vue  CharacterCard.vue  CommandPalette.vue  MarkdownRenderer.vue  Modal.vue  ModelSelect.vue  Navbar.vue  NewApiDialog.vue  NewCharacterCard.vue  NotificationToast.vue  ToolExecutionCard.vue  WorldBookEditor.vue  WorldBookEditorModal.vue  WorldBookEntry.vue  WorldBookEntryEditor.vue  WorldBookSearch.vue
src/composables/: useModal.ts  useNotification.ts
src/router/: index.ts
src/services/: aiChat.ts  aiConfig.ts  aiTools.ts  apiConfig.ts  backendCommandService.ts  characterStorage.ts
(+27 files in other folders)
