[package]
name = "character-card-copilot"
version = "0.9.0-beta"
description = "A Tauri App"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "character_card_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
serde_yaml = "0.9"
tokio = { version = "1.50.0", features = ["full"] }
lazy_static = "1.5.0"
png = "0.17"
image = "0.25"
async-trait = "0.1.89"
tiktoken-rs = "0.9.1"
once_cell = "1.21.3"
genai = "0.6.0-beta.3"
futures-util = "0.3.32"
regex = "1.12.3"

[patch.crates-io]
genai = { path = "../vendor/genai" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"
